--- a/index.html
+++ b/index.html
@@ -7,228 +7,414 @@
 
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
   <style>
-    :root {
-      --bg-soft: #090b10;
-      --text-main: #f5f5f5;
-      --text-muted: #a6a9b5;
-      --accent: #78d3ff;
-      --max-width: 1100px;
+    :root{
+      --bg-soft:#090b10;
+      --text-main:#f5f5f5;
+      --text-muted:#a6a9b5;
+      --accent:#78d3ff;
+
+      --max-width:1100px;
+      --max-width-wide:1240px;
+
+      --hdr-h:72px;
+      --border: rgba(255,255,255,.10);
+      --surface: rgba(8,10,12,.72);
+      --surface-strong: rgba(8,10,12,.92);
+      --shadow: 0 18px 50px rgba(0,0,0,.45);
+      --radius: 14px;
     }
 
-    /* BACKGROUND GIF */
-    body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      background: url('Timeline2.gif.gif') center/cover no-repeat fixed;
-      color: var(--text-main);
-      font-family: "Source Serif 4", serif;
+    /* Base */
+    *{ box-sizing:border-box; }
+    html, body{ height:100%; }
+    body{
+      margin:0;
+      min-height:100vh;
+      color:var(--text-main);
+      font-family:"Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+
+      /* BACKGROUND GIF (your asset) */
+      background:
+        radial-gradient(1200px 600px at 50% 0%, rgba(120,211,255,.10), transparent 60%),
+        radial-gradient(900px 500px at 20% 30%, rgba(255,255,255,.06), transparent 55%),
+        url("Timeline2.gif.gif") center/cover no-repeat fixed;
+      background-color: var(--bg-soft);
     }
+
+    a{ color:inherit; }
 
     /* HEADER */
-    header {
+    .site-header{
       position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 68px;
-      background: rgba(5, 6, 8, 0.80);
-      backdrop-filter: blur(6px);
+      inset: 0 0 auto 0;
+      height: var(--hdr-h);
       z-index: 1000;
+      background: linear-gradient(to bottom, rgba(5,6,8,.88), rgba(5,6,8,.62));
+      border-bottom: 1px solid rgba(255,255,255,.08);
+      backdrop-filter: blur(10px);
     }
 
-    nav {
-      max-width: var(--max-width);
+    .nav{
+      max-width: var(--max-width-wide);
       margin: 0 auto;
       height: 100%;
-      padding: 0 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      padding: 0 22px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 18px;
     }
 
-    .brand {
-      font-family: "Bebas Kai";
-      font-size: 1.2rem;
-      letter-spacing: 0.16em;
+    .brand{
+      font-family:"Bebas Kai", system-ui, sans-serif;
+      font-size: 1.15rem;
+      letter-spacing: .18em;
+      text-decoration:none;
       color: var(--text-main);
-      text-decoration: none;
+      line-height:1;
+      padding: 10px 10px;
+      border-radius: 12px;
+      transition: background .15s ease;
+      white-space: nowrap;
     }
+    .brand:hover{ background: rgba(255,255,255,.04); }
 
-    .menu {
-      list-style: none;
-      display: flex;
-      gap: 22px;
-      margin: 0;
-      padding: 0;
-      font-size: 0.92rem;
+    .menu{
+      list-style:none;
+      display:flex;
+      align-items:center;
+      gap: 14px;
+      margin:0;
+      padding:0;
       color: var(--text-muted);
-      align-items: center;
+      font-size: .94rem;
     }
 
-    .menu a {
+    .menu > li > a{
+      display:inline-flex;
+      align-items:center;
+      gap: 8px;
       color: inherit;
-      text-decoration: none;
-      position: relative;
-      padding-bottom: 2px;
+      text-decoration:none;
+      padding: 10px 10px;
+      border-radius: 12px;
+      position:relative;
+      white-space:nowrap;
+      transition: color .15s ease, background .15s ease;
+    }
+
+    .menu > li > a:hover{
+      color: var(--text-main);
+      background: rgba(255,255,255,.04);
+    }
+
+    .menu > li > a::after{
+      content:"";
+      position:absolute;
+      left: 10px;
+      right: 10px;
+      bottom: 7px;
+      height: 1px;
+      background: linear-gradient(90deg, transparent, var(--accent), transparent);
+      transform: scaleX(0);
+      transform-origin: center;
+      transition: transform .18s ease;
+      opacity: .95;
+    }
+    .menu > li > a:hover::after{ transform: scaleX(1); }
+
+    .chev{
+      color: rgba(166,169,181,.95);
+      font-size: .9em;
+      transform: translateY(1px);
+    }
+
+    .dropdown{ position: relative; }
+
+    .dropdown-content{
+      position:absolute;
+      top: calc(100% + 10px);
+      left: 0;
+      min-width: 260px;
+      margin:0;
+      padding: 10px;
+      list-style:none;
+
+      background: var(--surface-strong);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      backdrop-filter: blur(12px);
+
+      opacity:0;
+      visibility:hidden;
+      transform: translateY(-4px);
+      transition: opacity .16s ease, transform .16s ease, visibility .16s ease;
+      z-index: 1001;
+    }
+
+    .dropdown:hover .dropdown-content,
+    .dropdown:focus-within .dropdown-content{
+      opacity:1;
+      visibility:visible;
+      transform: translateY(0);
+    }
+
+    .dropdown-content li a{
+      display:block;
+      padding: 10px 10px;
+      border-radius: 10px;
+      color: var(--text-muted);
+      text-decoration:none;
+      transition: background .14s ease, color .14s ease;
+    }
+    .dropdown-content li a:hover{
+      color: var(--text-main);
+      background: rgba(255,255,255,.06);
+    }
+    .dropdown-content li + li{ margin-top: 2px; }
+
+    .nav-actions{
+      display:flex;
+      align-items:center;
+      gap: 10px;
       white-space: nowrap;
     }
 
-    .menu a:hover {
-      color: var(--accent);
+    .nav-link{
+      text-decoration:none;
+      font-size: .93rem;
+      padding: 9px 12px;
+      border-radius: 12px;
+      border: 1px solid transparent;
+      color: var(--text-main);
+      transition: background .15s ease, border-color .15s ease, color .15s ease;
+    }
+    .nav-link.subtle{
+      color: var(--text-muted);
+    }
+    .nav-link.subtle:hover{
+      color: var(--text-main);
+      background: rgba(255,255,255,.04);
+    }
+    .nav-link.btn{
+      border-color: rgba(120,211,255,.35);
+      background: rgba(120,211,255,.10);
+    }
+    .nav-link.btn:hover{
+      background: rgba(120,211,255,.16);
+      border-color: rgba(120,211,255,.55);
     }
 
-    .menu a::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 0%;
-      height: 1px;
-      background: var(--accent);
-      transition: width 0.2s;
+    /* Avoid content hidden under fixed header */
+    main{ padding-top: var(--hdr-h); }
+
+    /* HERO */
+    .hero{
+      min-height: calc(100vh - var(--hdr-h));
+      display:flex;
+      justify-content:center;
+      align-items:flex-start;
+      padding: 96px 22px 72px;
     }
 
-    .menu a:hover::after {
+    .hero-inner{
       width: 100%;
-    }
-
-    .dropdown {
-      position: relative;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      top: 26px;
-      left: 0;
-      min-width: 220px;
-      background: rgba(5, 6, 8, 0.97);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      padding: 10px 0;
-      list-style: none;
-      z-index: 999;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
-    .dropdown-content li {
-      padding: 4px 14px;
-    }
-
-    .dropdown-content li a {
-      display: block;
-      color: var(--text-muted);
-    }
-
-    .dropdown-content li a:hover {
-      color: var(--accent);
-      background: rgba(255, 255, 255, 0.06);
-    }
-
-    /* HERO SECTION */
-    .hero {
-      padding-top: 150px;
-      padding-bottom: 90px;
+      max-width: 860px;
       text-align: center;
-      max-width: 740px;
-      margin: 0 auto;
+
+      background: rgba(5,6,8,.68);
+      border: 1px solid rgba(255,255,255,.10);
+      box-shadow: 0 25px 70px rgba(0,0,0,.45);
+      backdrop-filter: blur(10px);
+
+      border-radius: 18px;
+      padding: 34px 34px 28px;
     }
 
-    .hero h1 {
-      font-family: "Bebas Kai";
-      font-size: 3.3rem;
-      letter-spacing: 0.13em;
-      margin-bottom: 0.3rem;
-    }
-
-    .hero-sub {
+    .kicker{
+      display:inline-flex;
+      align-items:center;
+      gap: 10px;
       color: var(--text-muted);
-      margin-bottom: 1.4rem;
-      font-size: 1.18rem;
-    }
-
-    .hero-text-box {
-      background: rgba(5, 6, 8, 0.55);
-      padding: 18px 26px;
-      border-radius: 6px;
-      backdrop-filter: blur(3px);
+      font-size: .95rem;
+      letter-spacing: .08em;
+      text-transform: uppercase;
       margin-bottom: 14px;
     }
 
-    .hero-text {
-      font-size: 1.06rem;
-      line-height: 1.75;
-      margin: 0;
+    .dot{
+      width: 6px;
+      height: 6px;
+      border-radius: 999px;
+      background: var(--accent);
+      box-shadow: 0 0 0 6px rgba(120,211,255,.10);
     }
 
+    .hero h1{
+      font-family:"Bebas Kai", system-ui, sans-serif;
+      font-size: 3.4rem;
+      letter-spacing: .14em;
+      margin: 0 0 10px;
+      line-height: 1.02;
+    }
+
+    .hero-sub{
+      margin: 0 auto 18px;
+      max-width: 52ch;
+      color: var(--text-muted);
+      font-size: 1.15rem;
+      line-height: 1.55;
+    }
+
+    .hero-copy{
+      margin: 0 auto;
+      max-width: 72ch;
+      font-size: 1.05rem;
+      line-height: 1.8;
+      color: rgba(245,245,245,.92);
+    }
+
+    .hero-meta{
+      display:flex;
+      justify-content:center;
+      flex-wrap: wrap;
+      gap: 10px 14px;
+      margin-top: 22px;
+      color: var(--text-muted);
+      font-size: .93rem;
+    }
+
+    .pill{
+      padding: 8px 12px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,.10);
+      background: rgba(255,255,255,.03);
+      backdrop-filter: blur(6px);
+      white-space: nowrap;
+    }
+
+    .hero-cta{
+      display:flex;
+      justify-content:center;
+      gap: 10px;
+      margin-top: 22px;
+    }
+
+    .cta{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap: 10px;
+      padding: 10px 14px;
+      border-radius: 14px;
+      border: 1px solid rgba(255,255,255,.10);
+      background: rgba(255,255,255,.04);
+      text-decoration:none;
+      color: var(--text-main);
+      transition: transform .15s ease, background .15s ease, border-color .15s ease;
+    }
+    .cta:hover{
+      transform: translateY(-1px);
+      background: rgba(255,255,255,.06);
+      border-color: rgba(255,255,255,.14);
+    }
+    .cta.primary{
+      border-color: rgba(120,211,255,.35);
+      background: rgba(120,211,255,.12);
+    }
+    .cta.primary:hover{
+      background: rgba(120,211,255,.18);
+      border-color: rgba(120,211,255,.55);
+    }
+
+    /* Small divider line inside hero */
+    .rule{
+      height: 1px;
+      width: 100%;
+      margin: 22px auto 0;
+      background: linear-gradient(90deg, transparent, rgba(120,211,255,.45), transparent);
+      opacity: .9;
+    }
+
+    /* Desktop-friendly: keep nav centered and readable */
+    @media (max-width: 980px){
+      .menu{ display:none; }
+    }
   </style>
 </head>
 
 <body>
+  <header class="site-header">
+    <nav class="nav" aria-label="Primary">
+      <a href="index.html" class="brand" aria-label="Home">MARIANA TORRES</a>
 
-  <!-- HEADER -->
-  <header>
-    <nav>
-      <a href="index.html" class="brand">MARIANA TORRES</a>
+      <ul class="menu" role="menubar">
+        <li role="none"><a role="menuitem" href="about.html">About</a></li>
 
-      <ul class="menu">
-        <li><a href="about.html">About</a></li>
-
-        <li class="dropdown">
-          <a href="projects.html">Projects ▾</a>
-          <ul class="dropdown-content">
-            <li><a href="artistic-works.html">Send me a Color</a></li>
-            <li><a href="research-preservation.html">Research & Preservation Works</a></li>
+        <li class="dropdown" role="none">
+          <a role="menuitem" href="projects.html" aria-haspopup="true">Projects <span class="chev">▾</span></a>
+          <ul class="dropdown-content" role="menu" aria-label="Projects submenu">
+            <li role="none"><a role="menuitem" href="artistic-works.html">Send me a Color</a></li>
+            <li role="none"><a role="menuitem" href="research-preservation.html">Research &amp; Preservation Works</a></li>
           </ul>
         </li>
 
-        <li class="dropdown">
-          <a href="analogue-film.html">Analogue Film Practice ▾</a>
-          <ul class="dropdown-content">
-            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
-            <li><a href="technical-documentation.html">Technical Documentation</a></li>
-            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
+        <li class="dropdown" role="none">
+          <a role="menuitem" href="analogue-film.html" aria-haspopup="true">Analogue Film Practice <span class="chev">▾</span></a>
+          <ul class="dropdown-content" role="menu" aria-label="Analogue Film submenu">
+            <li role="none"><a role="menuitem" href="photochemical-techniques.html">Photochemical Techniques</a></li>
+            <li role="none"><a role="menuitem" href="technical-documentation.html">Technical Documentation</a></li>
+            <li role="none"><a role="menuitem" href="darkroom-lab.html">Darkroom / Lab Work</a></li>
           </ul>
         </li>
 
-        <li><a href="writing-publications.html">Writing & Publications</a></li>
+        <li role="none"><a role="menuitem" href="writing-publications.html">Writing &amp; Publications</a></li>
       </ul>
+
+      <div class="nav-actions">
+        <a class="nav-link subtle" href="Mariana_Torres_CV.pdf" target="_blank" rel="noopener">CV</a>
+        <a class="nav-link btn" href="mailto:youremail@domain.com">Email</a>
+      </div>
     </nav>
   </header>
 
-  <!-- HERO -->
-.hero {
-  min-height: calc(100vh - 68px);
-  padding: 140px 20px 80px; 
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
+  <main>
+    <section class="hero">
+      <div class="hero-inner">
+        <div class="kicker"><span class="dot"></span> Moving image · archives · analogue processes</div>
 
-.hero-inner {
-  max-width: 760px;
-  margin: 0 auto;
-  background: rgba(5, 6, 8, 0.74);
-  padding: 30px 26px;
-  border-radius: 8px;
-  text-align: center;
-}
+        <h1>MARIANA TORRES</h1>
 
-  </div>
-</section>
+        <p class="hero-sub">
+          Audiovisual Archivist &amp; Moving Image Practitioner
+        </p>
 
-    </div>
-  </section>
+        <p class="hero-copy">
+          Working across moving image archives, preservation practices, and analogue film processes.
+          My work connects research, technical practice, and artistic approaches to the materiality of film.
+        </p>
 
+        <div class="hero-cta">
+          <a class="cta primary" href="projects.html">View projects</a>
+          <a class="cta" href="about.html">About</a>
+        </div>
+
+        <div class="rule"></div>
+
+        <div class="hero-meta" aria-label="Highlights">
+          <span class="pill">Preservation &amp; access</span>
+          <span class="pill">Photochemical techniques</span>
+          <span class="pill">Technical documentation</span>
+          <span class="pill">Writing &amp; research</span>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
